# inssider-scraper

./: .env.example  .gitignore  README.md  compose.yaml  conftest.py  pyproject.toml
__test__/: test_db.py
cli/: __init__.py  main.py
cli/commands/: _format.py  _install.py  _serve.py  _test.py  serve.py  test.py
controller/: i_test_api.py  main.py  test_api.py
db/: deprecated_model.py  handler.py  model.py
model/: controller.py
model/repository/: __init__.py  _base.py  account.py  etc.py  post.py  user.py  video.py
model/repository/test/: __init__.py  test_post.py  test_user.py
repository/: deprecated_model.py  handler.py  model.py  test_db.py
scrape/: strategy.py  tube.py  youtube.py
service/: hashtag_service.py  video_service.py
service/youtube/: crawler.py  strategy.py  test_youtube.py
temp/: __init__.py  cli.py  serve.py
