[build-system]
requires = ["setuptools>=80.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inssider-scraper"
version = "0.0.1"
description = "SNS Web Scraper"
requires-python = ">=3.13"
dependencies = [
    "selenium-wire",
    "blinker==1.7.0",
    "pytubefix",
    "SQLAlchemy",
    "python-dotenv",
    "fastapi",
    "uvicorn",
]
readme = "README.md"
authors = [{ name = "ooMia", email = "hyeonhak.kim.dev@gmail.com" }]
license-files = ["LICENSE"]
keywords = ["scraping", "crawler", "automation"]

[project.optional-dependencies]
dev = ["black", "isort", "flake8"]

[project.scripts]
inssider = "cli.main:entry_point"

[project.urls]
Repository = "https://github.com/ooMia/inssider-scraper"

[tool.setuptools.packages.find]
include = ["cli", "model", "controller", "service", "repository"]

[tool.black]
line-length = 100
