[build-system]
requires = ["setuptools>=80.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inssider-scraper"
version = "0.0.1"
description = "SNS Web Scraper"
requires-python = ">=3.13"
dependencies = [
    "setuptools",
    "selenium-wire",
    "blinker==1.7.0",
    "pytubefix",
    "SQLAlchemy",
    "python-dotenv",
    "fastapi",
    "uvicorn",
    "psycopg[binary]",
]
readme = "README.md"
authors = [{ name = "ooMia", email = "hyeonhak.kim.dev@gmail.com" }]
license-files = ["LICENSE"]
keywords = ["scraping", "crawler", "automation"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "black", "isort", "autoflake", "flake8"]

[project.scripts]
inssider = "cli.main:entry_point"

[project.urls]
Repository = "https://github.com/ooMia/inssider-scraper"

[tool.setuptools.packages.find]
include = ["cli", "model", "controller", "service", "repository"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv"]

[tool.autoflake]
remove-all-unused-imports = true
in-place = true
recursive = true
exclude = [".venv"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
